[package]
name = "recoverable-thread-pool"
version = "2.3.3"
edition = "2024"
authors = ["eastspire <root@ltpp.vip>"] 
license = "MIT"
description = """A thread pool that supports automatic recovery from panics, allowing threads to restart after a panic. Useful for resilient and fault-tolerant concurrency in network and web programming."""
keywords = ["time", "hyperlane", "day", "format", "lang"]
repository = "https://github.com/eastspire/recoverable-thread-pool.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
lombok-macros = "1.11.1"
recoverable-spawn = "3.7.3"
tokio = { version = "1.45.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
